2001-02-15  Jacob "Ulysses" Berkman  <jacob@helixcode.com>

	* default.in: add a `Nautilus' session.  In beta 2, `Classic' will
	run gmc, `Default' will run nautilus.
	
2001-02-14  jacob berkman  <jacob@ximian.com>

	* save.c (read_session): if we are choosing a session, also look
	in the default file for it.

	* session-properties-capplet.c (capplet_build): default to the
	default session

2001-02-14 Glynn Foster <glynn.foster@ireland.sun.com>
	
	* session-properties-capplet.c/session-names.c: Was freeing 
          something I shouldn't, so 'try' and 'revert' *should* work 
	  like you think they should work, only different :)
	* session-properties-capplet.h: Added mindless whitespace hacking
	* command.c: Added mindless comment

2001-02-14  Christophe Merlet  <redfox@eikonex.org>

	* session-properties.c: Marqued string for translation.

Tue Feb 13 23:41:58 2001  George Lebl <jirka@5z.com>

	* splash.c: use the windowmanager icon for sawfish, not sawfish.png,
	  until there is a nice sawfish icon

Tue Feb 13 21:57:18 2001  George Lebl <jirka@5z.com>

	* session-properties-capplet.c:  Save splash setting under the correct
	  key

	* splash.c: splash bugfixing galore.  Add nautilus to list of
	  programs we know.  Fix possible crashes related to bad timeout
	  removal.  Don't run icon_cb if not needed.  Fix possible races
	  on destruction.  Make sure the scalefactor is in a reasonable level
	  so we don't crash on rediculous splash screen images.  Rescale
	  icons when they go out of bounds.  Use "fontset" and not "font"
	  for text, and mark fontname for translation.  Should fix any
	  remaining "splash screen segfaults" bugs on bugzilla.

Fri Feb 9 2001 Glynn Foster <glynn.foster@sun.com>
	* save.c (set_session_name): Set the current session
	* gsm-protocol.c (gsm_protocol_set_session_name): Check *name
	  for non-NULL
	* session-properties-capplet.c (write_state): Remove config
	  code to set CurrentSession in ~/.gnome/session-options since