@@ -1,3 +1,8 @@
+2001-02-15  jacob berkman  <jacob@ximian.com>
+
+	* save.c (read_session): still look in user dir if session is
+	`Default'
+
 2001-02-15  Jacob "Ulysses" Berkman  <jacob@helixcode.com>
 
 	* default.in: add a `Nautilus' session.  In beta 2, `Classic' will
